Добавлена загрузка файлов

--- a/templates/container.twig
+++ b/templates/container.twig
@@ -9,8 +9,11 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
+    <link rel="stylesheet" href="js/fine-uploader/fine-uploader.min.css">
     <link rel="stylesheet" href="css/main.css">
+    
     <script src="js/main.js"></script>
+    <script src="js/fine-uploader/jquery.fine-uploader.min.js"></script>
 </head>
 <body>
 <div class="container">
